feat: novas classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=api
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost/eventostec}
-spring.datasource.username=${DB_USER:admin}
-spring.datasource.password=${DB_PASSWORD:admin}
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/eventostec}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:NovaSenhaSegura123}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 aws.region=${AWS_REGION:us-east-1}
 aws.bucket.name=${AWS_BUCKET_NAME:eventostec-imagens}
 admin.key=${ADMIN_KEY:admin}
 aws.accessKey=
 aws.secretKey=
 server.port=8090
+
+# SpringDoc OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
